# workspacer

./: .clangd  CMakeLists.txt  compile_flags.txt
src/: main.cpp  workspacer.config.json
src/cli/: cli.cpp  cli.hpp
src/filesystem/: file.cpp  file.hpp
src/io/: io.cpp  io.hpp
src/orchestrator/: orchestrator.cpp  orchestrator.hpp
src/process_launcher/: process_launcher.cpp  process_launcher.hpp
src/workspace/: workspace.hpp
